@@ -8,7 +8,11 @@ BUG FIXES:
  * makeClusterPSOCK() would produce an error on 'one node produced an error:
    could not find function "getOptionOrEnvVar"' if 'parallelly' is not
    available on the worker.
-   
+
+ * makeClusterPSOCK() would attempt to loaded 'parallelly' on the worker.
+   If it's not available on the worker, it would result in a silent warning
+   on the worker.  Now 'parallelly' is not loaded.
+
  * The error message on using an invalid 'rscript_envs' argument for
    makeClusterPSOCK() reported on the value of 'rscript_libs' (sic!).
  
